Add null check to PriceLevel